# Duality_Server

./: .gitmodules  CMakeLists.txt  main.cpp
common/: CMakeLists.txt  SysUtil.Posix.cpp  SysUtil.Posix.h  SysUtil.Windows.cpp  SysUtil.Windows.h  SysUtil.cpp
duality-server/: main.cpp
duality-server/common/: Error.h  SysUtil.Posix.cpp  SysUtil.Posix.h  SysUtil.cpp  SysUtil.h
duality-server/handlers/: Handlers.cpp  Handlers.h  TemplateProcessor.h
examples/switch/: scene.json
examples/switch/download/: Pallidus.g3d
examples/switch/python/: enumswitch.py  floatswitch.py
examples/switch/python/files/enum/: STN.g3d  Thalamus.g3d
examples/switch/python/files/float/: 1.g3d  2.g3d
examples/transparency/: scene.json
examples/transparency/download/: dodec.g3d  hand.i3m  hand.i3m.1dt  sphere.g3d  tetra.g3d  torus.g3d
examples/volume/: scene.json
examples/volume2/: scene.json
examples/volume2/python/: tf.py
examples/volume2/python/files/: hand2.i3m.1dt
ext/: CMakeLists.txt
handlers/: CMakeLists.txt  Handlers.cpp  Handlers.h  SceneReader.cpp  SceneReader.h  TemplateProcessor.cpp  TemplateProcessor.h
rpc/: CMakeLists.txt  Dispatcher.cpp  Dispatcher.h  JsonKeys.cpp  JsonKeys.h  Method.cpp  Method.h  MethodDescription.cpp  MethodDescription.h  ValueType.cpp  ValueType.h
tools/: g3d.py  g3dtools.py  obj.py
