cmake_minimum_required(VERSION 3.0.0)
PROJECT(IV3Dm-server)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS on)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
INCLUDE(Macros)

IF (UNIX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -fPIC -msse -msse2 -msse3 -pthread")
ENDIF()

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ext)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/mocca/mocca/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/mocca/mocca/src/thirdparty)

ADD_SUBDIRECTORY(mocca/mocca)

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(handlers)

ADD_EXECUTABLE(server
	${CMAKE_CURRENT_LIST_DIR}/main.cpp
	$<TARGET_OBJECTS:mocca>
	$<TARGET_OBJECTS:handlers>)