FILE(GLOB COMMON_HEADER ${CMAKE_CURRENT_LIST_DIR}/*.h)
FILE(GLOB COMMON_SOURCE ${CMAKE_CURRENT_LIST_DIR}/*.cpp)

IF (WIN32)
LIST(REMOVE_ITEM COMMON_HEADER ${CMAKE_CURRENT_LIST_DIR}/SysUtil.Posix.h)
LIST(REMOVE_ITEM COMMON_SOURCE ${CMAKE_CURRENT_LIST_DIR}/SysUtil.Posix.cpp)
ELSE ()
LIST(REMOVE_ITEM COMMON_HEADER ${CMAKE_CURRENT_LIST_DIR}/SysUtil.Windows.h)
LIST(CMAKE_CURRENT_LIST_DIR)
ENDIF ()

CreateSourceGroups("${COMMON_HEADER} ${COMMON_HEADER}" ${CMAKE_CURRENT_LIST_DIR})
CreateSourceGroups("${COMMON_SOURCE} ${COMMON_SOURCE}" ${CMAKE_CURRENT_LIST_DIR})

ADD_LIBRARY(common OBJECT ${COMMON_HEADER} ${COMMON_SOURCE})