FILE(GLOB HANDLERS_HEADER ${CMAKE_CURRENT_LIST_DIR}/*.h)
FILE(GLOB HANDLERS_SOURCE ${CMAKE_CURRENT_LIST_DIR}/*.cpp)

CreateSourceGroups("${HANDLERS_HEADER} ${HANDLERS_HEADER}" ${CMAKE_CURRENT_LIST_DIR})
CreateSourceGroups("${HANDLERS_SOURCE} ${HANDLERS_SOURCE}" ${CMAKE_CURRENT_LIST_DIR})

ADD_LIBRARY(handlers OBJECT ${HANDLERS_HEADER} ${HANDLERS_SOURCE})