FILE(GLOB RPC_HEADER ${CMAKE_CURRENT_LIST_DIR}/*.h)
FILE(GLOB RPC_SOURCE ${CMAKE_CURRENT_LIST_DIR}/*.cpp)

CreateSourceGroups("${RPC_HEADER} ${RPC_HEADER}" ${CMAKE_CURRENT_LIST_DIR})
CreateSourceGroups("${RPC_SOURCE} ${RPC_SOURCE}" ${CMAKE_CURRENT_LIST_DIR})

ADD_LIBRARY(rpc OBJECT ${RPC_HEADER} ${RPC_SOURCE})